# synacor_challenge

./: .gitignore  Cargo.toml  after_teleport.json  antechamber.json  arch-spec  end.json  hacked.txt  hacked2.txt  log.txt  solve_eq.py  teleporter.json  verification_routine.txt
src/: grid.rs  main.rs  routine.rs
