[package]
name = "synacor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = { version = "0.6.2", default-features = false }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
